[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
faker = "^30.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
